# wargo

./: .gitignore  Cargo.toml  README.md  Wargo.toml
.cargo/: audit.toml  config.toml
.github/: CONTRIBUTING.md  dependabot.yml
.github/workflows/: audit.yaml  ci.yaml  dependabot-auto-merge.yml
src/: check.rs  lib.rs  paths.rs  progress.rs
