[package]
name = "wargo"
description = "cargo's evil twin to work with projects in the twilight zone of WSL2"
version = "0.2.2"
edition = "2021"
readme = "README.md"
homepage = "https://github.com/asaaki/wargo"
repository = "https://github.com/asaaki/wargo"
categories = [
  "command-line-utilities",
  "development-tools",
  "development-tools::build-utils",
  "development-tools::cargo-plugins",
]
keywords = ["cargo", "wsl", "wsl2", "windows", "cli"]
license = "MIT OR Apache-2.0"
exclude = [".assets/*", ".cargo/*", ".github/*", "Wargo.toml"]

[lib]
name = "wargo_lib"

# https://fasterthanli.me/articles/why-is-my-rust-build-so-slow
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
incremental = true

[profile.dev.package.backtrace]
opt-level = 3

[dependencies]
cargo_metadata = "0.15.4"
color-eyre = { version = "0.6.2", default-features = false }
dirs = "5.0.0"
filetime = "0.2.21"
globwalk = "0.8.1"
indicatif = "0.17.3"
serde = { version = "1.0.160", features = ["derive"] }
toml = "0.7.3"

# maybe we want to prevent concurrent runs of wargo eventually:
# fd-lock = "3.0.2"
