[package]
name = "wargo"
description = "cargo's evil twin to work with projects in the twilight zone of WSL2"
version = "0.4.1"
edition = "2021"
readme = "README.md"
homepage = "https://github.com/asaaki/wargo"
repository = "https://github.com/asaaki/wargo"
categories = [
  "command-line-utilities",
  "development-tools",
  "development-tools::build-utils",
  "development-tools::cargo-plugins",
]
keywords = ["cargo", "wsl", "wsl2", "windows", "cli"]
license = "MIT OR Apache-2.0"
exclude = [".assets/*", ".cargo/*", ".github/*", "Wargo.toml"]

default-run = "wargo"

[lib]
name = "wargo_lib"

# https://fasterthanli.me/articles/why-is-my-rust-build-so-slow
[profile.release]
opt-level = 3
codegen-units = 1
lto = true
incremental = true
strip = true

[dependencies]
anyhow = "1.0.82"
cargo_metadata = "0.18.1"
cprint = { version = "0.5.0", features = ["ceprint"] }
dirs = "5.0.1"
filetime = "0.2.23"
globwalk = "0.9.1"
indicatif = "0.17.8"
serde = { version = "1.0.200", features = ["derive"] }
toml = "0.8.12"

# maybe we want to prevent concurrent runs of wargo eventually:
# fd-lock = "3.0.2"
