[package]
name = "wargo"
description = "cargo's evil twin to work with projects in the twilight zone of WSL2"
version = "0.4.1"
edition = "2021"
readme = "README.md"
homepage = "https://github.com/asaaki/wargo"
repository = "https://github.com/asaaki/wargo"
categories = [
  "command-line-utilities",
  "development-tools",
  "development-tools::build-utils",
  "development-tools::cargo-plugins",
]
keywords = ["cargo", "wsl", "wsl2", "windows", "cli"]
license = "MIT OR Apache-2.0"
exclude = [".assets/*", ".cargo/*", ".github/*", "Wargo.toml"]

default-run = "wargo"

[lib]
name = "wargo_lib"

[features]
default = []
docs = []

# https://fasterthanli.me/articles/why-is-my-rust-build-so-slow
[profile.release]
opt-level = 3
codegen-units = 1
lto = true
incremental = true
strip = true

[dependencies]
anyhow = "1.0.100"
cargo_metadata = "0.23.1"
cprint = { version = "1.0.0", features = ["ceprint"] }
dirs = "6.0.0"
filetime = "0.2.27"
globwalk = "0.9.1"
indicatif = "0.18.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149" # force recent version to fix Hash trait conflict in cargo_metadata
toml = "1.0.1"

# maybe we want to prevent concurrent runs of wargo eventually:
# fd-lock = "3.0.2"
